istio/virtualservice2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-vs2
spec:
  hosts:
  - '*'
  gateways:
  - simple-gw
  http:
  - match:
    - uri:
        prefix: /test
    rewrite:
      uri: /
    route:
    - destination:
        host: test-svc.default.svc.cluster.local
        port:
          number: 8080
